--- a/assets/contactos.css
+++ b/assets/contactos.css
@@ -23,15 +23,15 @@ h1 {
 }
 
 nav {
-    margin-left: 21rem;
-    margin-top: 8rem;
+    margin-left: 50rem;
+    margin-top: 6.8rem;
 }
 
 nav li {
     display: inline-block;
     text-transform: uppercase;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 30px;
     margin-left: 1.5rem;
 
 
@@ -68,13 +68,29 @@ footer {
 }
 
 main{
-    width: 500px;
-    margin:  3rem 12rem;
+    width: 100%;
+    margin:  3rem 17rem;
+    display: flex;
+    gap: 3rem;
+   
 }
+
+.formu{
+    width: 800px;
+   
+}
+
+.horarios{
+
+    margin: 5rem 0 0 10rem;
+    
+}
+
 
 form{
     display: flex;
     flex-direction: column;
+    
 }
 
 form label, form p{
@@ -86,10 +102,13 @@ form label, form p{
 form input{
     margin: 0 0 20px;
     padding: 10px 25px;
+    border-radius: 20px;
 }
 textarea{
     margin: 0 0 20px;
     padding: 10px 15px;
+    border-radius: 20px;
+
 }
 
 /* .checkbox label{
@@ -102,15 +121,14 @@ textarea{
 }
 
 .submit{
-    width: 50%;
+    width: 100%;
     font-size: 15px;
     font-weight: bold;
     color: #fff;
     background-color: #c78c19;
     border: none;
     box-shadow: 5px 7px 10px rgba(0,0,0);
-    border-radius: 7px;
-    margin-left: 5rem;
+    border-radius: 20px;
     margin-top: 1rem;
     padding: 1rem;
     transition: 1s all;
@@ -141,5 +159,6 @@ thead{
 
 td,th{
     border: 1px solid black;
-    padding: 8px 15px;
+    padding: 10px 25px;
+    border-radius: 10px;
 }
