--- a/assets/productos.css
+++ b/assets/productos.css
@@ -23,6 +23,7 @@ header{
     background-color: lightgray;
     display: flex;
     padding: 2rem;
+   
 }
 
 h1{
@@ -30,15 +31,16 @@ h1{
 }
 
 nav{
-    margin-left: 21rem;
-    margin-top: 8rem;
+
+    margin-left: 50rem;
+    margin-top: 6.8rem;
 }
 
 nav  li{
     display: inline-block;
     text-transform: uppercase;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 30px;
     margin-left: 1.5rem;
     
 
@@ -64,7 +66,7 @@ nav li:hover{
 .products{
     display: flex;
     width: 940px;
-    margin: 1.5rem 10rem;
+    margin: 1.5rem 0 1.5rem 25rem;
     gap: 3rem;
     text-align: center;
 
@@ -73,7 +75,7 @@ nav li:hover{
 .products li{
     display: inline-block;
     border: solid;
-    padding: 0.7rem;
+    padding: 3rem;
     border-radius: 15px;
     
 }
