--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,7 @@ img{
 }
 #title-Principal{
 
-    text-shadow: 1px 1px 5px rgba(0, 0, 0);
+    /* text-shadow: 1px 1px 5px rgba(0, 0, 0); */
     font-weight: bold;
 
 }
@@ -36,17 +36,16 @@ h1 img{
 }
 
 nav {
-    margin-left: 20rem;
+    margin-left: 50rem;
     margin-top: 6.8rem;
-    font-size: 2.8rem;
-    text-shadow: 1px 1px 5px rgba(0, 0, 0);
+    /* text-shadow: 1px 1px 5px rgba(0, 0, 0); */
 }
 
 nav li {
     display: inline-block;
     text-transform: uppercase;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 30px;
     margin-left: 1.5rem;
 
 
@@ -130,17 +129,28 @@ h3{
     margin: 1rem;
 }
 
-.conten-dif{
-    width: 350px;
-    margin: 5rem 0 0 5rem ;
-  
+.diferenciales{
+    width: 940px;
+    margin-left: 30rem;
+    padding: 0.25rem 0;
+    border-radius: 20px;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+   
+   
 }
 
 .conten{
     display: flex;
-    margin: 0 0 2em;
-
-
+    width: 752px;
+    margin: 0 auto;
+    
+    
+}
+.conten-dif{
+    width: 350px;
+    margin: 5rem 0 0 5rem ;
+  
 }
 
 .conten > img{
@@ -154,15 +164,6 @@ h3{
     opacity: 0.3;
 }
 
-.diferenciales{
-    width: 55%;
-    margin-left: 19rem;
-    padding: 0.25rem 0;
-    border-radius: 20px;
-    margin-bottom: 2rem;
-    margin-top: 1rem;
-   
-}
 .items{
     
     font-size: 12px;
@@ -202,7 +203,7 @@ footer {
 }
 
 footer img{
-    width: 20%;
+    width: 10%;
 }
 
 
