--- a/assets/style.css
+++ b/assets/style.css
@@ -48,7 +48,6 @@ nav li {
     font-size: 30px;
     margin-left: 1.5rem;
 
-
 }
 
 nav a {
@@ -207,3 +206,84 @@ footer img{
 }
 
 
+@media screen and (max-width:500px){
+    nav, .diferenciales, h1 , h1 img,  h3{
+        margin-left: 0;
+    }
+    body{
+        margin-left: 0;
+    }
+    h1 img{
+        width: 70%;
+    }
+        nav {
+            margin: 0;
+        }
+    
+        nav li {
+            display: flex;
+            font-size: 18px;
+            margin: 40px 0 1rem 4rem ;
+            
+        }
+    
+    .banner{
+        
+        height: 300px;
+    }
+    .principal{
+        width: 80%;
+        margin: 0 auto ;      
+    }
+    .mapa{
+        width: 80%;
+        margin: 1rem auto;
+        
+    }
+    iframe {
+        margin: 0;
+    }
+
+    .diferenciales {
+        width: 80%;   
+        margin: 0 0 0 5rem;
+      
+
+    }
+
+    .conten {
+     
+        width: 80%;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        
+    }
+
+    .conten-dif {
+        width: 80%;
+        margin: 0 auto;
+        margin-left: 4rem;
+    }
+
+    .conten>img {
+    width: 100%;
+    margin: 0 0 2rem auto;
+}
+
+.video {
+    width: 80%;
+    margin: 1rem auto;
+    padding-bottom: 1rem;
+
+}
+footer img {
+    width: 40%;
+}
+
+footer{
+ margin-top: -1rem;
+}
+
+}
