--- a/assets/productos.css
+++ b/assets/productos.css
@@ -12,7 +12,6 @@ img {
 }
 
 main img{
-
     box-shadow: 0 0 0 rgb(255, 250, 250);
 }
 
@@ -63,6 +62,7 @@ nav li:hover{
 }
 
 
+
 .products{
     display: flex;
     width: 940px;
@@ -71,6 +71,8 @@ nav li:hover{
     text-align: center;
 
 }
+
+
 
 .products li{
     display: inline-block;
@@ -115,10 +117,42 @@ footer{
     text-align: center;
     background: url(./imagenes/bg.jpg);
     padding: 40px;
+    margin-top: -2rem;
 }
 
 .copyright{
     color: #fff;
     font-size: 13px;
     margin: 20px;
+}
+
+@media screen and (max-width:1580px) {
+
+    h1 {
+            margin-left: 0;
+        }
+    
+        nav {
+    
+            margin-left: 0;  
+        }
+    
+        nav li {
+            display: flex;
+            font-size: 15px;
+            margin-left: 5rem;
+            margin-bottom: 1rem;
+    
+        }
+
+
+    .products {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        margin: 2rem auto;
+        padding: 1rem;
+    }
+
+
 }
