--- a/assets/style.css
+++ b/assets/style.css
@@ -181,9 +181,10 @@ h3{
 }
 
 .video{
-    width: 560px;
+    width: 50%;
     margin: 1em auto;
     margin-bottom: -1rem;
+    height: 500px;
     
 }
 
@@ -206,7 +207,7 @@ footer img{
 }
 
 
-@media screen and (max-width:500px){
+@media screen and (max-width:1580px){
     nav, .diferenciales, h1 , h1 img,  h3{
         margin-left: 0;
     }
@@ -216,17 +217,17 @@ footer img{
     h1 img{
         width: 70%;
     }
-        nav {
-            margin: 0;
-        }
-    
-        nav li {
-            display: flex;
-            font-size: 18px;
-            margin: 40px 0 1rem 4rem ;
-            
-        }
-    
+    nav {
+        margin: 0;
+    }
+
+    nav li {
+        display: flex;
+        font-size: 18px;
+        margin: 40px 0 1rem 4rem ;
+        
+    }
+
     .banner{
         
         height: 300px;
@@ -246,9 +247,13 @@ footer img{
 
     .diferenciales {
         width: 80%;   
-        margin: 0 0 0 5rem;
-      
-
+        margin: 0 auto;
+        
+    }
+    h3{
+        
+        margin-bottom: 2rem;
+       
     }
 
     .conten {
@@ -262,14 +267,20 @@ footer img{
     }
 
     .conten-dif {
-        width: 80%;
+        width: 100%;
         margin: 0 auto;
-        margin-left: 4rem;
+        
+    }
+
+    .items{
+        margin-left: 5rem;
+        font-size:medium;
+        margin-bottom: 0.5rem;
     }
 
     .conten>img {
     width: 100%;
-    margin: 0 0 2rem auto;
+    margin: 0 0 2rem 3rem;
 }
 
 .video {
@@ -280,6 +291,7 @@ footer img{
 }
 footer img {
     width: 40%;
+    
 }
 
 footer{
@@ -287,3 +299,4 @@ footer{
 }
 
 }
+
