--- a/assets/productos.css
+++ b/assets/productos.css
@@ -61,7 +61,9 @@ nav li:hover{
     text-decoration: underline;
 }
 
-
+main{
+    background-color: #fff;
+}
 
 .products{
     display: flex;
@@ -126,7 +128,7 @@ footer{
     margin: 20px;
 }
 
-@media screen and (max-width:1580px) {
+@media screen and (max-width: 580px) {
 
     h1 {
             margin-left: 0;
@@ -152,6 +154,10 @@ footer{
         flex-direction: column;
         margin: 2rem auto;
         padding: 1rem;
+    }
+
+    footer{
+        background-color: rgba(0, 0, 0, 0.198);
     }
 
 
