--- a/assets/contactos.css
+++ b/assets/contactos.css
@@ -72,6 +72,7 @@ main{
     margin:  3rem 17rem;
     display: flex;
     gap: 3rem;
+    background-color: #fff;
    
 }
 
@@ -149,8 +150,7 @@ textarea{
     margin: 0 0.5rem;
 }
 table{
-    margin: 40px;
-    
+    margin: 40px; 
 }
 thead{
     background-color: #555555;
@@ -163,7 +163,7 @@ td,th{
     border-radius: 10px;
 }
 
-@media screen and (max-width:1580px) {
+@media screen and (max-width: 1580px) {
 
     h1 {
         margin-left: 0;
@@ -179,10 +179,38 @@ td,th{
         font-size: 15px;
         margin-left: 5rem;
         margin-bottom: 1rem;
+    }
+
+    main {
+        width: 80%;
+        margin: 1rem auto;
+        display: flex;
+        flex-direction: column;
 
     }
 
+    .formu{
+        width: 100%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: left;
+    }
+
+    .horarios{
+        width: 100%;
+        margin: 0 auto;
+        
+    }
+
+    .containerButton{
+        width: 350px;
+        margin: 0 ;
+
+    }
+     
 
 
-
+ footer {
+     background-color: rgba(0, 0, 0, 0.198);
+ }
 }
