--- a/assets/productos.css
+++ b/assets/productos.css
@@ -22,7 +22,12 @@ header{
     background-color: lightgray;
     display: flex;
     padding: 2rem;
+    position: relative;
    
+}
+
+.container-menu {
+    display: none;
 }
 
 h1{
@@ -30,9 +35,10 @@ h1{
 }
 
 nav{
-
-    margin-left: 50rem;
-    margin-top: 6.8rem;
+    position: absolute;
+    padding: 0 8rem;
+    right: 2rem;
+    bottom: 8rem;
 }
 
 nav  li{
@@ -157,10 +163,70 @@ footer{
     
         } */
 
+    header {
+        display: flex;
+        justify-content: space-between;
+        box-shadow: 5px 5px 12px rgb(0, 0, 0);
+    }
+
     .barrita{
         display: none;
     }
 
+
+    .container-menu {
+        padding: 1rem;
+        display: block;
+    }
+
+
+    .menu-button {
+        display: block;
+        cursor: pointer;
+    }
+
+    .menu {
+        display: none;
+
+    }
+
+    #menu-toggle:checked~.menu {
+        display: block;
+
+    }
+
+
+    .container-menu img {
+        width: 60px;
+        height: 60px;
+    }
+
+    .menu ul {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+        list-style-type: none;
+        position: fixed;
+        background-color: #888888c6;
+        width: 100%;
+        height: 50%;
+        left: 0;
+        border-radius: 20px;
+        padding: 4rem 0;
+
+    }
+
+    .menu a {
+        font-size: 40px;
+        text-decoration: none;
+        color: rgb(0, 0, 0);
+
+    }
+
+    #menu-toggle {
+        transform: scale(0);
+    }
    
 
 
