--- a/assets/style.css
+++ b/assets/style.css
@@ -9,9 +9,9 @@
 
 header {
     background-color: lightgray;
-
     display: flex;
     padding: 2rem;
+    position: relative;
 }
 img{
     box-shadow: 5px 8px 12px rgba(0, 0, 0);
@@ -22,6 +22,10 @@ img{
     /* text-shadow: 1px 1px 5px rgba(0, 0, 0); */
     font-weight: bold;
 
+}
+
+.container-menu{
+    display: none;
 }
 
 h1 {
@@ -36,9 +40,10 @@ h1 img{
 }
 
 nav {
-    margin-left: 50rem;
-    margin-top: 6.8rem;
-    /* text-shadow: 1px 1px 5px rgba(0, 0, 0); */
+    position: absolute;
+    padding: 0 8rem;
+    right: 2rem;
+    bottom: 8rem;
 }
 
 nav li {
@@ -218,69 +223,76 @@ footer img{
         margin-left: 0;
         
     }
-    h1 img{
-        width: 70%;
-    }
-    /* nav {
-        margin: 0;
-    }
-
-    nav li {
+   
+    header{
         display: flex;
-        font-size: 18px;
-        margin: 40px 0 1rem 4rem ;
-        
-    } */
-
+        justify-content: space-between;
+        box-shadow: 5px 5px 12px rgb(0, 0, 0);
+    }
   
 
     .barrita {
         display: none;
     }
+    /* Display none */
+    .container-menu{
+        display: block;
+        padding: 1rem;
+       
+    }
 
-    /* .menu{
-        
-        width: 50%;
-        margin: 0 auto;
-        display: flex;
-        justify-content: end;
-        align-items: center;
-        
+
+    .menu-button {
+        display: block;
+        cursor: pointer;
+    }
+
+    .menu {
+        display: none;
         
     }
 
-    .menu img{
-        width: 50px;
-        height: 50px;
+    #menu-toggle:checked  ~ .menu {
+        display: block;
         
+    }
+
+
+    .container-menu img{
+        width: 60px;
+        height: 60px;
     }
 
     .menu ul{
-       
-        position: absolute;
-        top: 9.5rem;
-        height: 50%;
-        background-color: rgba(0, 255, 255, 0.082);
         display: flex;
-        flex-direction: column;
+        justify-content: space-between;
         align-items: center;
-        width: 300px;
-        border-radius: 20px;
-        box-shadow: 2px 2px 8px rgba(0,0,0);
-    }
-    .menu li{
-        margin: 4rem auto;
-        font-size: 30px;
+        flex-direction: column;
         list-style-type: none;
-    }
-    ul a{
-        text-decoration: none;
-        color: black;
+        position: fixed;
+        background-color: #888888c6;
+        width: 100%;
+        height: 50%;
+        left: 0;
         border-radius: 20px;
+        padding: 4rem 0;
         
-    } */
+    }
+
+    .menu a{
+        font-size: 40px;
+        text-decoration: none;
+        color: rgb(0, 0, 0);
+        
+    }
+
+    #menu-toggle{
+        transform: scale(0);
+    }
 
 
+/* Display none */
+    
 
     .banner{
         
